--- a/.github/workflows/main_IsCoolApp.yml
+++ b/.github/workflows/main_IsCoolApp.yml
@@ -53,6 +53,11 @@ jobs:
         EOF
         echo "appsettings.json criado com valores injetados dos secrets."
 
+    - name: Instalar jq
+      run: sudo apt-get update && sudo apt-get install -y jq
+
+    - name: Validar JSON
+      run: jq . appsettings.json
     # -------------------------------------
     # Etapa de Login e Autenticação
     # -------------------------------------
