Tente outra vez

--- a/IsCool/Dockerfile
+++ b/IsCool/Dockerfile
@@ -5,24 +5,26 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
 # Copia e restaura a solução e os projetos para garantir cache eficiente.
-# Assume que a Solution (.sln) está na raiz do repositório.
 COPY *.sln .
 
-# Copia os arquivos de projeto (incluindo o arquivo principal IsCool.csproj).
-# Eles são copiados para /src/IsCool/ e /src/IsCool.Tests/
+# Copia os arquivos de projeto (.csproj)
 COPY ["IsCool/IsCool.csproj", "IsCool/"]
 COPY ["IsCool.Tests/IsCool.Tests.csproj", "IsCool.Tests/"]
 
 # Restaura as dependências
 RUN dotnet restore "IsCool/IsCool.csproj"
 
-# CRUCIAL: Copia TODO o conteúdo do diretório IsCool/ (os arquivos de código-fonte como Program.cs, Controllers/) 
-# para o diretório IsCool/ DENTRO do WORKDIR (/src/IsCool/).
-# Isso resolve o erro CS5001 e garante que o compilador encontre o Program.cs.
+# **CORREÇÃO CRUCIAL PARA appsettings.json:**
+# 1. Copia o appsettings.json (que contém os secrets injetados pelo GH Action) de forma explícita.
+# Isso resolve o erro 'FALHA - NÃO ENCONTRADO'.
+COPY IsCool/appsettings.json IsCool/appsettings.json
+
+# 2. Copia o restante do conteúdo de IsCool/ (código-fonte, incluindo Program.cs e Controllers/)
 COPY IsCool/. IsCool/
+
 WORKDIR "/src/IsCool"
 
-# Faz o build da aplicação
+# Faz o build da aplicação.
 RUN dotnet build "IsCool.csproj" -c Release -o /app/build
 
 # -----------------------------------------------------
@@ -30,6 +32,7 @@ RUN dotnet build "IsCool.csproj" -c Release -o /app/build
 # -----------------------------------------------------
 FROM build AS publish
 WORKDIR "/src/IsCool"
+# O dotnet publish irá incluir o appsettings.json que foi copiado acima.
 RUN dotnet publish "IsCool.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 # -----------------------------------------------------
@@ -37,7 +40,7 @@ RUN dotnet publish "IsCool.csproj" -c Release -o /app/publish /p:UseAppHost=fals
 # -----------------------------------------------------
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
-# Copia APENAS os binários publicados (que já contêm o appsettings.json e a IsCool.dll)
+# Copia APENAS os binários publicados (agora com appsettings.json garantido)
 COPY --from=publish /app/publish .
 
 # Define a porta do Container App para 8080 (padrão)
