Tente outra vez

--- a/IsCool/Dockerfile
+++ b/IsCool/Dockerfile
@@ -14,17 +14,12 @@ COPY ["IsCool.Tests/IsCool.Tests.csproj", "IsCool.Tests/"]
 # Restaura as dependências
 RUN dotnet restore "IsCool/IsCool.csproj"
 
-# **CORREÇÃO CRUCIAL PARA appsettings.json:**
-# 1. Copia o appsettings.json (que contém os secrets injetados pelo GH Action) de forma explícita.
-# Isso resolve o erro 'FALHA - NÃO ENCONTRADO'.
-COPY IsCool/appsettings.json IsCool/appsettings.json
-
-# 2. Copia o restante do conteúdo de IsCool/ (código-fonte, incluindo Program.cs e Controllers/)
+# Copia todo o código fonte (incluindo o appsettings.json gerado no CI) para a pasta de build
 COPY IsCool/. IsCool/
 
 WORKDIR "/src/IsCool"
 
-# Faz o build da aplicação.
+# Faz o build da aplicação
 RUN dotnet build "IsCool.csproj" -c Release -o /app/build
 
 # -----------------------------------------------------
@@ -32,7 +27,6 @@ RUN dotnet build "IsCool.csproj" -c Release -o /app/build
 # -----------------------------------------------------
 FROM build AS publish
 WORKDIR "/src/IsCool"
-# O dotnet publish irá incluir o appsettings.json que foi copiado acima.
 RUN dotnet publish "IsCool.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 # -----------------------------------------------------
@@ -40,8 +34,14 @@ RUN dotnet publish "IsCool.csproj" -c Release -o /app/publish /p:UseAppHost=fals
 # -----------------------------------------------------
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
-# Copia APENAS os binários publicados (agora com appsettings.json garantido)
+
+# 1. Copia os binários publicados (DLLs)
 COPY --from=publish /app/publish .
+
+# 2. CORREÇÃO DEFINITIVA ("Lock-in" do Arquivo):
+# Copia explicitamente o appsettings.json da etapa de build para a pasta final.
+# Ignoramos se o dotnet publish incluiu ou não; nós garantimos que ele esteja aqui.
+COPY --from=build /src/IsCool/appsettings.json /app/appsettings.json
 
 # Define a porta do Container App para 8080 (padrão)
 ENV ASPNETCORE_URLS=http://+:8080
